--- a/sesion04/css-grid-layout/src/css/styles.css
+++ b/sesion04/css-grid-layout/src/css/styles.css
@@ -1,3 +1,70 @@
-h1 {
-    color: tomato;
+/* Color Theme Swatches in Hex */
+* {
+    --color-1-hex : #F20732; 
+    --color-2-hex : #07038C; 
+    --color-3-hex : #0439D9;
+    --color-4-hex : #056CF2; 
+    --color-5-hex : #F20505; 
+  }
+
+
+.container-1 > * {
+    font-size: xx-large;
+}
+
+.container-1 {
+    display: grid;
+    height: 100vh;
+    grid-template-areas: 
+    "header"
+    "aside-1"
+    "section-2"
+    "aside-2"
+    "section-1"
+    "footer"
+    ;
+}
+
+@media (min-width: 769px){
+    .container-1 {
+        grid-template-areas: 
+        "header header header header"
+        "aside-1 section-2 aside-2 section-1"
+        "footer footer footer footer"
+        ;
+    }
+}
+.container-1 > header{
+    grid-area: header;
+}
+.container-1 > footer{
+    grid-area: footer;
+}
+.container-1 > aside:nth-of-type(1){
+    grid-area: aside-1;
+    background-color: var(--color-1-hex);
+}
+.container-1 > aside:nth-of-type(2){
+    grid-area: aside-2;
+    background-color: var(--color-2-hex);
+}
+.container-1 > section:nth-of-type(1){
+    grid-area: section-1;
+    background-color: var(--color-1-hex);
+}
+.container-1 > section:nth-of-type(2){
+    grid-area: section-2;
+    background-color: var(--color-2-hex);
+}
+
+.container-2 {
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 1fr 9fr;
+    grid-template-rows: 1fr 9fr 2fr;
+    grid-template-areas: 
+    "header header"
+    "aside main"
+    "aside footer"
+    ;
 }
