--- a/sesion06/bootstrap-website/src/css/style.css
+++ b/sesion06/bootstrap-website/src/css/style.css
@@ -45,6 +45,71 @@ html, body {
     border: 1px solid dodgerblue;
 }
 
+.fa-code{
+    color: firebrick;
+}
+.fa-css3{
+    color: deepskyblue;
+}
+.fa-js{
+    color: gold;
+}
+.fa-code, .fa-css3, .fa-js{
+    font-size: 3rem;
+    margin: 1.5rem;
+}
+
+.fa-facebook{
+    color: blue;
+}
+.fa-instagram{
+    color: lightcoral;
+}
+.fa-twitter{
+    color: skyblue;
+}
+.fa-youtube{
+    color: red;
+}
+.fa-linkedin-in{
+    color: blue;
+}
+.social-media {
+    display: flex;
+    justify-content: space-evenly;
+}
+.social-media a{
+    font-size: 3rem;
+    margin: 1.5rem;
+}
+/* <!-- fixed image background --> */
+figure{
+    position: relative;
+    width: 100%;
+    height: 60vh;
+    margin: 0;
+}
+.fixed-wrap {
+    clip: rect(0, auto, auto, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.fixed {
+    background-image: url(../img/slider-1.jpg);
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+}
+
+
+
 @media(max-width: 768px){
     .carousel-inner img {
         min-height: 45vh;
@@ -58,8 +123,26 @@ html, body {
     .carousel-caption h3 {
         font-size: 1.5rem;
     }
+}
+@media(max-width: 576px){
+    .carousel-inner img {
+        min-height: 45vh;
+    }
+    .carousel-caption{
+        top: 36%;
+    }
+    .carousel-caption h2 {
+        font-size: 3rem;
+    }
+    .carousel-caption h3 {
+        font-size: 1.5rem;
+    }
     .carousel-caption button{
-        padding: .25rem .5rem;
+        margin-top: 1rem;
+        padding: .3rem .6rem;
         font-size: .8rem;
+    }
+    .carousel-indicators{
+        display: none;
     }
 }
